@@ -5,6 +5,7 @@ WORKDIR /officefloor/src/woof_raw
 RUN mvn -q clean package
 
 FROM openjdk:10
+RUN apt-get update && apt-get install -y libjna-java
 WORKDIR /officefloor
 COPY --from=maven /officefloor/src/woof_raw/target/woof_raw-1.0.0.jar server.jar
-CMD ["java", "-Xms2g", "-Xmx2g", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-jar", "server.jar"]
+CMD ["java", "-Xms2g", "-Xmx2g", "-server", "-XX:+UseNUMA", "-jar", "server.jar"]
